src/main/java/cea/language/xsc/parser/XCS.bnf
{
  parserClass="cea.language.xsc.parser.XCSParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="XCS"
  psiImplClassSuffix="Impl"
  psiPackage="cea.language.xsc.psi"
  psiImplPackage="cea.language.xsc.psi.impl"

  elementTypeHolderClass="cea.language.xsc.psi.XCSTypes"
  elementTypeClass="cea.language.xsc.psi.XCSElementType"
  tokenTypeClass="cea.language.xsc.psi.XCSTokenType"

  psiImplUtilClass="cea.language.xsc.psi.impl.XCSPsiImplUtil"
}

xsc_file ::= items *
private items ::= (collection_event_section|data_variable_section|equipment_constant_section|events_section|scenarios_section|secs_item_type_section|standart_sections|status_variable_section|vfei_secs_seq_section|functions|COMMENT)

// SF paragraph treatment
functions ::= (FUNCTION_NAME COLON STREAM_FUNCTION FUNCTION_COMMENT? FUNCTION_CORE* FUNCTION_END FUNCTION_COMMENT?)
FUNCTION_CORE ::= (CORE_START VARIABLE_TYPE VARIABLE_NAME? PROPERTY? VARIABLE_VALUE* CORE_END FUNCTION_COMMENT?) |
                  (CORE_START ASCII_TYPE VARIABLE_NAME? PROPERTY? ASCII_VALUE* CORE_END FUNCTION_COMMENT?) |
                  (CORE_START LIST_TYPE VARIABLE_NAME? PROPERTY? FUNCTION_COMMENT? FUNCTION_CORE* CORE_END FUNCTION_COMMENT?) { mixin="cea.language.xsc.psi.impl.XCSNamedElementImpl"
                                                                                                                                implements="cea.language.xsc.psi.XCSNamedElement"
                                                                                                                                methods = [getFunctionName getSF getDepth getCommentSize getValue getName setName getNameIdentifier]}
PROPERTY ::= PROPERTY_START PROPERTY_+ PROPERTY_END
PROPERTY_ ::= PROPERTY_NAME EQUALS PROPERTY_VALUE { mixin="cea.language.xsc.psi.impl.XCSNamedElementImpl"
                                                    implements="cea.language.xsc.psi.XCSNamedElement"
                                                    methods = [getProp getValue getName setName getNameIdentifier getReferenceType]}

// CE paragraph treatment
collection_event_section ::= (COLLECTION_EVENT COLON FUNCTION_COMMENT? CE_LIST? FUNCTION_END FUNCTION_COMMENT?)
CE_LIST ::= (CORE_START LIST_TYPE CE_CORE* CORE_END FUNCTION_COMMENT?)
CE_CORE ::= (CORE_START ASCII_TYPE CEID? CE_PROPERTY? ASCII_VALUE CORE_END FUNCTION_COMMENT?) |
            (CORE_START VARIABLE_TYPE CEID? CE_PROPERTY? VARIABLE_VALUE CORE_END FUNCTION_COMMENT?)
CE_PROPERTY ::= PROPERTY_START CE_PROPERTY_+ PROPERTY_END
CE_PROPERTY_ ::= PROPERTY_NAME_CE EQUALS PROPERTY_VALUE

// DV paragraph treatment
data_variable_section ::= (DATA_VARIABLE COLON FUNCTION_COMMENT? DV_LIST? FUNCTION_END FUNCTION_COMMENT?)
DV_LIST ::= (CORE_START LIST_TYPE DV_CORE* CORE_END FUNCTION_COMMENT?)
DV_CORE ::= (CORE_START ASCII_TYPE (DVID|VARIABLE_NAME)? DV_PROPERTY? ASCII_VALUE? CORE_END FUNCTION_COMMENT?) |
            (CORE_START LIST_TYPE VARIABLE_NAME? DV_PROPERTY? DV_CORE* CORE_END FUNCTION_COMMENT?) |
            (CORE_START VARIABLE_TYPE (DVID|VARIABLE_NAME)? DV_PROPERTY? VARIABLE_VALUE? CORE_END FUNCTION_COMMENT?)
DV_PROPERTY ::= PROPERTY_START DV_PROPERTY_+ PROPERTY_END
DV_PROPERTY_ ::= PROPERTY_NAME_DV EQUALS PROPERTY_VALUE

// EC paragraph treatment
equipment_constant_section ::= (EQUIPMENT_CONSTANT COLON FUNCTION_COMMENT? EC_LIST? FUNCTION_END FUNCTION_COMMENT?)
EC_LIST ::= (CORE_START LIST_TYPE EC_CORE* CORE_END FUNCTION_COMMENT?)
EC_CORE ::= (CORE_START ASCII_TYPE ECID? EC_PROPERTY? ASCII_VALUE CORE_END FUNCTION_COMMENT?) |
            (CORE_START VARIABLE_TYPE ECID? EC_PROPERTY? VARIABLE_VALUE CORE_END FUNCTION_COMMENT?)
EC_PROPERTY ::= PROPERTY_START EC_PROPERTY_+ PROPERTY_END
EC_PROPERTY_ ::= PROPERTY_NAME_EC EQUALS PROPERTY_VALUE

// SIT paragraph treatment
secs_item_type_section ::= (SECS_ITEM_TYPE COLON FUNCTION_COMMENT? SIT_LIST? FUNCTION_END FUNCTION_COMMENT?)
SIT_LIST ::= (CORE_START LIST_TYPE SIT_CORE* CORE_END FUNCTION_COMMENT?)
SIT_CORE ::= (CORE_START ASCII_TYPE VARIABLE_NAME CORE_END FUNCTION_COMMENT?) |
             (CORE_START VARIABLE_TYPE VARIABLE_NAME CORE_END FUNCTION_COMMENT?)

// SV paragraph treatment
status_variable_section ::= (STATUS_VARIABLE COLON FUNCTION_COMMENT? SV_LIST? FUNCTION_END FUNCTION_COMMENT?)
SV_LIST ::= (CORE_START LIST_TYPE SV_CORE* CORE_END FUNCTION_COMMENT?)
SV_CORE ::= (CORE_START ASCII_TYPE (SVID|VARIABLE_NAME)? SV_PROPERTY? ASCII_VALUE? CORE_END FUNCTION_COMMENT?) |
            (CORE_START LIST_TYPE VARIABLE_NAME? SV_PROPERTY? SV_CORE* CORE_END FUNCTION_COMMENT?) |
            (CORE_START VARIABLE_TYPE (SVID|VARIABLE_NAME)? SV_PROPERTY? VARIABLE_VALUE? CORE_END FUNCTION_COMMENT?)
SV_PROPERTY ::= PROPERTY_START SV_PROPERTY_+ PROPERTY_END
SV_PROPERTY_ ::= PROPERTY_NAME_SV EQUALS PROPERTY_VALUE

// VSS paragraph treatment
vfei_secs_seq_section ::= (VFEI_SECS_SEQ COLON FUNCTION_COMMENT? VSS_LIST? FUNCTION_END FUNCTION_COMMENT?)
VSS_LIST ::= (CORE_START LIST_TYPE VSS_CORE* CORE_END FUNCTION_COMMENT?)
VSS_CORE ::=  (CORE_START ASCII_TYPE VSS_PROPERTY? ASCII_VALUE CORE_END FUNCTION_COMMENT?) |
              (CORE_START LIST_TYPE (VFEI_CMD_ITEM_NAME|VARIABLE_NAME)? VSS_PROPERTY? VSS_CORE* CORE_END FUNCTION_COMMENT?)
VSS_PROPERTY ::= PROPERTY_START VSS_PROPERTY_+ PROPERTY_END
VSS_PROPERTY_ ::= PROPERTY_NAME_VSS EQUALS PROPERTY_VALUE

// SCENARIOS paragraph treatment
scenarios_section ::= (SCENARIOS COLON STREAM_FUNCTION FUNCTION_COMMENT? SCENARIOS_CORE* FUNCTION_END FUNCTION_COMMENT?)
SCENARIOS_CORE ::= (CORE_START ASCII_TYPE ASCII_VALUES_5 CORE_END FUNCTION_COMMENT?) |
                   (CORE_START LIST_TYPE VARIABLE_NAME? SCENARIOS_CORE* CORE_END FUNCTION_COMMENT?) |
ASCII_VALUES_5 ::= ASCII_VALUE ASCII_VALUE ASCII_VALUE ASCII_VALUE ASCII_VALUE

// EVENTS paragraph treatment
events_section ::= (EVENTS COLON STREAM_FUNCTION FUNCTION_COMMENT? EVENTS_CORE* FUNCTION_END FUNCTION_COMMENT?)
EVENTS_CORE ::= (CORE_START ASCII_TYPE ASCII_VALUES_4 CORE_END FUNCTION_COMMENT?) |
                (CORE_START LIST_TYPE VARIABLE_NAME? EVENTS_CORE* CORE_END FUNCTION_COMMENT?) |
ASCII_VALUES_4 ::= ASCII_VALUE ASCII_VALUE ASCII_VALUE ASCII_VALUE

// SS paragraph treatment
standart_sections ::= (STANDART_SECTION COLON FUNCTION_COMMENT? FUNCTION_CORE* FUNCTION_END FUNCTION_COMMENT?)
